Added Darker Theme

--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -4,8 +4,8 @@
     position: fixed;
     top: 0;
     left: -250px;
-    background-color: #fff;
-    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+    background-color: black;
+    box-shadow: 2px 0px 5px rgba(255, 255, 255, 0.5);
     transition: left 0.3s ease-in-out;
 }
 
@@ -29,7 +29,7 @@
 
 .sideDrawer nav ul li a {
     text-decoration: none;
-    color: #333;
+    color: whitesmoke;
     font-weight: bold;
 }
 
