--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -1,7 +1,7 @@
 .SummaryDisplay {
     position: fixed;
     z-index: 500;
-    background-color: white;
+    background-color: black;
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
@@ -10,6 +10,7 @@
     top: 30%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
+    color: whitesmoke;
 }
 .Button {
     background-color: transparent;
